--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 /ZZ_NetbeansProjects/A_HelloNepal/nbproject/private/
 /ZZ_NetbeansProjects/B_LoginForm/nbproject/private/
 /ZZ_NetbeansProjects/B_LoginForm/build/
+/ZZ_NetbeansProjects/A_HelloWorld/nbproject/private/
+/ZZ_NetbeansProjects/A_HelloWorld/build/
+/ZZ_NetbeansProjects/c_hello_test/nbproject/private/
+/ZZ_NetbeansProjects/c_hello_test/build/
+/ZZ_NetbeansProjects/A_Hello_Nepal/nbproject/private/
+/ZZ_NetbeansProjects/A_Hello_Nepal/build/
+/ZZ_NetbeansProjects/B_Login_Form/nbproject/private/
+/ZZ_NetbeansProjects/B_Login_Form/build/
