--- a/ZZ_NetbeansProjects/A_Hello_Nepal/nbproject/project.properties
+++ b/ZZ_NetbeansProjects/A_Hello_Nepal/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/A_HelloNepal.jar
+dist.jar=${dist.dir}/A_Hello_Nepal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/A_HelloNepal
+dist.jlink.output=${dist.jlink.dir}/A_Hello_Nepal
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=A_HelloNepal
-main.class=a_hellonepal.A_HelloNepal
+jlink.launcher.name=A_Hello_Nepal
+main.class=a_hello_nepal.A_Hello_Nepal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
