--- a/ZZ_NetbeansProjects/B_Login_Form/nbproject/project.properties
+++ b/ZZ_NetbeansProjects/B_Login_Form/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/B_LoginForm.jar
+dist.jar=${dist.dir}/B_Login_Form.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/B_LoginForm
+dist.jlink.output=${dist.jlink.dir}/B_Login_Form
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=B_LoginForm
-main.class=Login.LoginJFrame
+jlink.launcher.name=B_Login_Form
+main.class=Login.UserLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
