--- a/ZZ_NetbeansProjects/A_Hello_Nepal/build.xml
+++ b/ZZ_NetbeansProjects/A_Hello_Nepal/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="A_HelloNepal" default="default" basedir=".">
-    <description>Builds, tests, and runs the project A_HelloNepal.</description>
+<project name="A_Hello_Nepal" default="default" basedir=".">
+    <description>Builds, tests, and runs the project A_Hello_Nepal.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="A_HelloNepal-impl.jar">
+        <target name="run" depends="A_Hello_Nepal-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
