--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@
 /ZZ_NetbeansProjects/A_Hello_Nepal/build/
 /ZZ_NetbeansProjects/B_Login_Form/nbproject/private/
 /ZZ_NetbeansProjects/B_Login_Form/build/
+/ZZ_NetbeansProjects/C_JDBC/nbproject/private/
+/ZZ_NetbeansProjects/C_JDBC/build/
+/ZZ_NetbeansProjects/C_JDBC/dist/
+/ZZ_NetbeansProjects/C_SQL_JDBC/nbproject/private/
+/ZZ_NetbeansProjects/C_SQL_JDBC/build/
+/ZZ_NetbeansProjects/C_SQL_JDBC/dist/
+/ZZ_NetbeansProjects/JavaApplication11/nbproject/private/
